Added support for Gradle and Maven both for the P Java (#403)
* Updated the PJavaRuntime library to use gradle.

* Added gradle project support for symbolic P.